--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,7 @@ version: '3.11'
 services:
   api:
     build:
-      context: ./app
-      dockerfile: Dockerfile
+      context: .
     ports:
       - "${SERVICE_PORT}:8000"
     depends_on:
